--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 .gdrive-screenshot {
     display: flex;
-    width: 50%;
+    border-radius: 10px;
 }
 
 .gdrive-screenshot img {
@@ -9,7 +9,7 @@
 
 .unity-screenshot {
     display: flex;
-    width: 40%;
+    width: 70%;
 }
 
 .unity-screenshot img {
@@ -26,4 +26,72 @@
     border-radius:25px;
     text-align:center;
     border:none;
+}
+
+.round-button:hover
+{
+    background-color: #99ccff;
+}
+
+body {
+    margin: 0;
+}
+
+h1 {
+   font-size: 100px;
+   color : #0033ff;
+   margin-top: 0;
+   margin-bottom: 0;
+}
+
+h2 {
+    font-size: 70px;
+    color: white;
+    margin: 0;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+p {
+    font-size: 20px;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+strong {
+    font-size: 25px;
+}
+
+#app-description {
+    margin-left: 20px;
+}
+
+.how-to-background {
+    background-color: #0033ff;
+}
+
+.how-to-element-left {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 40%;
+}
+
+.how-to-element-right {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: 20px;
+    width: 40%;
+}
+
+ol {
+    list-style-type: none;
+    padding-left: 0px;
+    padding-bottom: 20px;
+    margin-bottom: 0;
 }
