--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 160px;
     color: #0033ff;
     margin-top: 0;
     margin-bottom: 0;
@@ -84,9 +84,11 @@ strong {
     background-color: white;
     border-radius: 50px;
     padding: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 20px;
+    margin-bottom: 20px;
     flex-grow: 1;
+    box-shadow: 6px 6px 15px #0033ff;
 }
 
 .how-to-element-right {
@@ -99,9 +101,11 @@ strong {
     background-color: white;
     border-radius: 50px;
     padding: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
     flex-grow: 1;
+    box-shadow: 6px 6px 15px #0033ff;
 }
 
 .how-to-index {
@@ -121,7 +125,7 @@ ol {
 }
 
 .how-to-column:hover {
-    background-color: #99ccff;
+    background-color: white;
 }
 
 .how-to-column:hover .how-to-index {
